# libarchive-rust

./: Cargo.toml  README.md
examples/: extract.rs
src/: archive.rs  error.rs  lib.rs  reader.rs  writer.rs
tests/: lib.rs
tests/fixtures/: sample.7z  sample.rar  sample.tar  sample_rar4.rar
tests/util/: path.rs
