[package]
name = "libarchive"
version = "0.2.0"
authors = ["Jamie Winsor <reset@chef.io>", "Jamie Quigley <jamie@quigley.xyz>"]
license = "LGPLv3"
repository = "https://github.com/Sciencentistguy/libarchive-rust"
description = "A safe Rust API for authoring and extracting archives with libarchive"
keywords = ["libarchive", "archive", "tar", "zip", "mtree"]

[dependencies]
libc = ">= 0.2.0"
libarchive3-sys = "0.1"
